corrected files added

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ jdk: oraclejdk11
 
 script: mvn -e verify
 
+before_install:
+  - chmod +x mvnw
+
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
