corrected files added

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk: oraclejdk11
 script: mvn -e verify
 
 before_install:
-  - chmod +x mvnw
+  -- chmod +x mvnw
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
