--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: java
 jdk: oraclejdk11
 
+script: mvn -e verify
 
+before_install:
+  - chmod +x mvnw
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
