--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: java
 jdk: oraclejdk11
 
-script: mvn -e verify
+install: true
 
-before_install:
-  - chmod +x mvnw
+script: - mvn install
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
