--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: java
 jdk: oraclejdk11
 
-install: true
+script: mvn -e verify
 
-script: - mvn install
+before_install:
+  - chmod +x mvnw
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
+
 
 notifications:
   email:
